--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,18 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_contacts: ^1.1.5+1
+  flutter_randomcolor: ^1.0.14
+  objectbox: ^1.7.0
+  objectbox_flutter_libs: ^1.7.0
+  path_provider: ^2.0.11
   phone_state: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.0.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  objectbox_generator: ^1.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,8 +56,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/avatar1.jpeg
   #   - images/a_dot_ham.jpeg
   fonts:
     - family: OpenSans
